@@ -32,6 +32,10 @@ Drupal 6.0, xxxx-xx-xx (development version)
     * Used the Garland theme for the installation and maintenance pages.
     * Added theme preprocess functions for themes that are templates
 - Refactored update.php to a generic batch API to be able to run time consuming operations in multiple subsequent HTTP requests
+- Installer:
+    * Themed the installer with the Garland theme.
+    * Added form to provide initial site information during installation.
+    * Added ability to provide extra installation steps programmatically.
 
 Drupal 5.0, 2007-01-15
 ----------------------
